📍 Update buttons ordering

--- a/content/links.njk
+++ b/content/links.njk
@@ -23,183 +23,183 @@ scripts: '<script>
 
 {% set links = [
   {
-    "alt": "32bit cafe",
+    "name": "32bit cafe",
     "href": "https://32bit.cafe",
     "src": "32bitcafe.png",
     "type": "button"
   }, {
-    "alt": "Accessible Net",
+    "name": "Accessible Net",
     "href": "https://pinkvampyr.leprd.space/accessiblenet/directory",
     "src": "accessiblenet.png",
     "type": "button"
   }, {
-    "alt": "debtdeath",
+    "name": "debtdeath",
     "href": "https://debtdeath.neocities.org/",
     "src": "debtdeath.png",
     "type": "button"
   }, {
-    "alt": "Divergent Rays",
+    "name": "Divergent Rays",
     "href": "https://divergentrays.com/",
     "src": "divergentrays.png",
     "type": "button"
   },
   {
-    "alt": "Dizzy",
+    "name": "Dizzy",
     "href": "https://doctordizzy.space/",
     "src": "dizzy.png",
     "type": "button"
   }, {
-    "alt": "Double Incision",
+    "name": "Double Incision",
     "href": "https://doubleincision.com/",
     "src": "doubleincision.png",
     "type": "button"
   }, {
-    "alt": "fh 102",
+    "name": "fh 102",
     "href": "https://fh102.neocities.org/",
     "src": "fh102.png",
     "type": "button"
   }, {
-    "alt": "Fizzsea",
+    "name": "Fizzsea",
     "href": "https://fizzsea.neocities.org/",
     "src": "fizzsea.png",
     "type": "button"
   }, {
-    "alt": "grlrot",
+    "name": "grlrot",
     "href": "https://grlrot.neocities.org/",
     "src": "grlrot.png",
     "type": "button"
   }, {
-    "alt": "Hillhouse",
+    "name": "Hillhouse",
     "href": "https://hillhouse.neocities.org/",
     "src": "hillhouse.png",
     "type": "button"
   }, {
-    "alt": "Inkcaps",
+    "name": "Inkcaps",
     "href": "https://inkcaps.neocities.org/",
     "src": "inkcaps.png",
     "type": "button"
   }, {
-    "alt": "Jasmine's Journal",
+    "name": "Jasmine's Journal",
     "href": "https://jasm1nii.xyz/",
     "src": "jasmines_journal.png",
     "type": "button"
   }, {
-    "alt": "Just Fluffing Around",
+    "name": "Just Fluffing Around",
     "href": "https://justfluffingaround.neocities.org/",
     "src": "justfluffingaround.png",
     "type": "button"
   }, {
-    "alt": "Lost Letters",
+    "name": "Lost Letters",
     "href": "https://lostletters.neocities.org/",
     "src": "lostletters.png",
     "type": "button"
   }, {
-    "alt": "lipu pi jan sunosin",
+    "name": "lipu pi jan sunosin",
     "href": "https://sunosin.neocities.org/",
     "src": "lipu_pi_jan_sunosin.png",
     "type": "button"
   }, {
-    "alt": "Maria",
+    "name": "Maria",
     "href": "https://maria.town/",
     "src": "maria_town.png",
     "type": "button"
   }, {
-    "alt": "Maya Land",
+    "name": "Maya Land",
     "href": "https://maya.land/",
     "src": "maya_land.png",
     "type": "button"
   }, {
-    "alt": "Melon King",
+    "name": "Melon King",
     "href": "https://melonking.net/",
     "src": "melonking.png",
     "type": "button"
   }, {
-    "alt": "Moon Prism",
+    "name": "Moon Prism",
     "href": "https://moonpr1sm.neocities.org",
     "src": "moonpr1sm.png",
     "type": "button"
   }, {
-    "alt": "Owl's Roost",
+    "name": "Owl's Roost",
     "href": "https://owlsroost.xyz/",
     "src": "owlsroost.png",
     "type": "button"
   }, {
-    "alt": "Neonaut",
+    "name": "Neonaut",
     "href": "https://neonaut.neocities.org/",
     "src": "neonaut.png",
     "type": "button"
   }, {
-    "alt": "Nonkiru",
+    "name": "Nonkiru",
     "href": "https://nonkiru.art",
     "src": "nonkiru.png",
     "type": "button"
   }, {
-    "alt": "Not Prince Hamlet",
+    "name": "Not Prince Hamlet",
     "href": "https://notprincehamlet.neocities.org/",
     "src": "notprincehamlet.png",
     "type": "button"
   }, {
-    "alt": "PinkVampyr",
+    "name": "PinkVampyr",
     "href": "https://pinkvampyr.neocities.org/",
     "src": "pinkvampyr.png",
     "type": "button"
   }, {
-    "alt": "Pixel Moondust",
+    "name": "Pixel Moondust",
     "href": "https://pixelmoondust.neocities.org/",
     "src": "pixelmoondust.png",
     "type": "button"
   }, {
-    "alt": "PunkWasp",
+    "name": "PunkWasp",
     "href": "https://punkwasp.leprd.space/",
     "src": "punkwasp.png",
     "type": "button"
   }, {
-    "alt": "Salixx",
+    "name": "Salixx",
     "href": "https://salixx.neocities.org/",
     "src": "salixx.png",
     "type": "button"
   }, {
-    "alt": "Sanguine Royal",
+    "name": "Sanguine Royal",
     "href": "https://sanguineroyal.com/",
     "src": "sanguineroyal.png",
     "type": "button"
   }, {
-    "alt": "Sentimental Futurist",
+    "name": "Sentimental Futurist",
     "href": "https://sentimentalfuturist.net/",
     "src": "sentimental_futurist.png",
     "type": "button"
   }, {
-    "alt": "Sneek Realm",
+    "name": "Sneek Realm",
     "href": "https://sneekrealm.neocities.org/",
     "src": "sneekrealm.png",
     "type": "button"
   }, {
-    "alt": "Solaria",
+    "name": "Solaria",
     "href": "https://solaria.neocities.org/",
     "src": "solaria.png",
     "type": "button"
   }, {
-    "alt": "Soya Toast",
+    "name": "Soya Toast",
     "href": "https://soyatoast.neocities.org/",
     "src": "soyatoast.png",
     "type": "button"
   }, {
-    "alt": "Starbreaker",
+    "name": "Starbreaker",
     "href": "https://starbreaker.org/",
     "src": "starbreaker.png",
     "type": "button"
   }, {
-    "alt": "Whiona",
+    "name": "Whiona",
     "href": "https://whiona.me/",
     "src": "whiona.png",
     "type": "button"
   }, {
-    "alt": "The Museum of Alexandra",
+    "name": "The Museum of Alexandra",
     "href": "https://xandra.cc/",
     "src": "xandra.png",
     "type": "button"
   },{
-    "alt": "Mostly Pixels",
+    "name": "Mostly Pixels",
     "href": "https://mostlypixels.com/",
     "src": "mostlypixels.png",
     "type": "button"
@@ -260,7 +260,7 @@ scripts: '<script>
     "color": "#fff",
     "type": "link"
   }, {
-    "name": "10kph",
+    "name": "ten@earth",
     "href": "https://10kph.neocities.org",
     "size": "11px",
     "bg": "#1c1e26",
@@ -371,12 +371,12 @@ scripts: '<script>
 ] %}
 
 {% set tools = [{
-    "alt": "Wiby",
+    "name": "Wiby",
     "href": "https://wiby.me",
     "src": "wiby.png",
     "type": "button"
   }, {
-    "alt": "Internet Archive: Wayback Machine",
+    "name": "Internet Archive: Wayback Machine",
     "href": "http://web.archive.org/",
     "src": "wayback_machine.png",
     "type": "button"
@@ -467,7 +467,7 @@ scripts: '<script>
 
 <section class="reading-width">
   <ul class="buttonwall">
-    {% for link in links | sort(attribute="alt", attribute="name") %}
+    {% for link in links | attribute="name") %}
     {% if link.type == "button" %}
     <li class="buttonwall__image">
       <a href="{{link.href}}">
@@ -483,9 +483,10 @@ scripts: '<script>
     {% endif%}
     {% endfor %}
   </ul>
+
   <h2>Friends</h2>
   <ul class="buttonwall">
-    {% for friend in friends | sort(attribute="alt", attribute="name") %}
+    {% for friend in friends | attribute="name") %}
     <li class="buttonwall__item">
       <a href="{{friend.href}}" style="font-size: {{friend.size}};  background-color: {{friend.bg}}; color: {{friend.color}};">
         {{friend.name}}
@@ -496,7 +497,7 @@ scripts: '<script>
 
   <h2>Creatives</h2>
   <ul class="buttonwall">
-    {% for creative in creatives | sort(attribute="alt", attribute="name") %}
+    {% for creative in creatives | attribute="name") %}
     <li class="buttonwall__item">
       <a href="{{creative.href}}" style="font-size: {{creative.size}};  background-color: {{creative.bg}}; color: {{creative.color}};">
         {{creative.name}}
@@ -507,7 +508,7 @@ scripts: '<script>
 
   <h2>Tools & fun things</h2>
   <ul class="buttonwall">
-    {% for tool in tools | sort(attribute="alt", attribute="name") %}
+    {% for tool in tools | attribute="name") %}
     {% if tool.type == "button" %}
     <li class="buttonwall__image">
       <a href="{{tool.href}}">
@@ -526,7 +527,7 @@ scripts: '<script>
 
   <h2>Bookmarks & link lists</h2>
   <ul class="buttonwall">
-    {% for bookmark in bookmarks | sort(attribute="alt", attribute="name") %}
+    {% for bookmark in bookmarks | attribute="name") %}
     {% if bookmark.type == "button" %}
     <li class="buttonwall__image">
       <a href="{{bookmark.href}}">
