❄️ Add 32bitcafe community event advert

--- a/assets/css/abstracts/_utility.css
+++ b/assets/css/abstracts/_utility.css
@@ -58,6 +58,13 @@
   break-inside: avoid-column;
 }
 
+.fl-r {
+  float: right;
+}
+
+.d-b {
+  display: block;
+}
 .d-ib {
   display: inline-block;
 }
