--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -29,7 +29,7 @@
   --dashboard-bg: SlateBlue;
   --dashboard-outline: #3e318e;
   --callout-info: DeepSkyBlue;
-  --logo-x: Gold;
+  --logo-x: White;
   --logo-anim-1: hsl(255, 70%, 70%);
   --logo-anim-2: hsl(330, 70%, 70%);
   --logo-anim-3: hsl(10, 100%, 60%);
@@ -42,7 +42,9 @@ html[data-scheme='dark'] {
   --bodybg: #1e1e1e;
   --bg: Black;
   --bodyrgb: 0, 0, 0;
+  --highlight: Gold;
   --accent: Gold;
+  --accentcontrast: Black;
   --separator: PaleGreen;
   --interactive: OrangeRed;
   --input-bg: #1e1e1e;
@@ -55,6 +57,7 @@ html[data-scheme='dark'] {
   --dashboard-bg: SlateBlue;
   --dashboard-outline: #3e318e;
   --callout-info: DeepSkyBlue;
+  --logo-x: Gold;
   --logo-anim-1: hsl(255, 70%, 70%);
   --logo-anim-2: hsl(330, 70%, 70%);
   --logo-anim-3: hsl(10, 100%, 60%);
@@ -67,50 +70,57 @@ html[data-scheme='dark'] {
 @media (prefers-color-scheme: light) {
   :root {
     --bodybg: LavenderBlush;
-    --bg: Snow;
+    --bg: #FFCFDF;
     --bodyrgb: 255, 250, 250;
     --interactive: #e1007a;
     --input-bg: Lavender;
     --input-border: DeepSkyBlue;
     --separator: DeepPink;
-    --accent: #d73a00;
-    --link: Blue;
-    --linkaccent: LightSteelBlue;
+    --highlight: OrangeRed;
+    --accent: #FF5790;
+    --accentcontrast: Black;
+    --link: Purple;
+    --linkaccent: Plum;
     --linkhover: #e1007a;
+    --linkvisited: BlueViolet;
     --text: Black;
     --subtext: Indigo;
     --dashboard-bg: LemonChiffon;
     --dashboard-outline: Yellow;
+    --logo-x: White;
     --logo-anim-1: hsl(255, 70%, 70%);
     --logo-anim-2: hsl(330, 100%, 40%);
     --logo-anim-3: hsl(10, 100%, 50%);
     --logo-anim-4: hsl(320, 100%, 50%);
     --logo-anim-5: hsl(204, 100%, 50%);
     --logo-anim-6: hsl(153, 100%, 40%);
-
   }
 }
 
 html[data-scheme='light'] {
   --bodybg: LavenderBlush;
-  --bg: Snow;
+  --bg: #FFCFDF;
   --bodyrgb: 255, 250, 250;
   --interactive: #e1007a;
   --input-bg: Lavender;
   --input-border: DodgerBlue;
   --separator: DeepPink;
-  --accent: #d73a00;
-  --link: Blue;
-  --linkaccent: LightSteelBlue;
+  --highlight: OrangeRed;
+  --accent: #FF5790;
+  --accentcontrast: Black;
+  --link: Purple;
+  --linkaccent: Plum;
   --linkhover: #e1007a;
+  --linkvisited: BlueViolet;
   --text: Black;
-  --subtext: Indigo;
+  --subtext: DarkRed;
   --dashboard-bg: Gold;
   --dashboard-outline: Goldenrod;
+  --logo-x: Gold;
   --logo-anim-1: hsl(255, 70%, 70%);
   --logo-anim-2: hsl(330, 100%, 40%);
   --logo-anim-3: hsl(10, 100%, 50%);
   --logo-anim-4: hsl(320, 100%, 50%);
   --logo-anim-5: hsl(204, 100%, 50%);
-  --logo-anim-6: hsl(153, 100%, 40%);
+  --logo-anim-6: hsl(153, 100%, 30%);
 }
