--- a/assets/css/components/_callout.css
+++ b/assets/css/components/_callout.css
@@ -1,8 +1,10 @@
 .callout {
   border: 4px solid var(--accent);
+  background-color: var(--bodybg);
   padding: 20px;
   margin: 0 0 1rem 0;
-  font-size: 90%;
+  font-size: 85%;
+  border-radius: 0.75rem;
 }
 
 .callout--small {
