--- a/content/collections.njk
+++ b/content/collections.njk
@@ -36,20 +36,20 @@ style: '
 <section class="dashboard">
   <article class="dashboard__item --card">
     <figure class="dashboard__item-image --square">
-      <img src="/images/collections/stickers/cover.png" alt="Great alt text" loading="lazy" role="presentation">
+      <img src="/images/collections/stickers/cover.png" alt="" loading="lazy" role="presentation">
     </figure>
     <header>
-        <h2 class="--bgwiggly">
+        <h2>
           <a href="/collections/sticker-album" class="hidden">Sticker album</a>
         </h2>
       </header>
   </article>
   <article class="dashboard__item --card">
     <figure class="dashboard__item-image --square">
-      <img src="/images/collections/avatars/cover.png" alt="Great alt text" loading="lazy" role="presentation">
+      <img src="/images/collections/avatars/cover.png" alt="" loading="lazy" role="presentation">
     </figure>
     <header>
-        <h2 class="--bgwiggly">
+        <h2>
           <a href="/collections/avatars" class="hidden">Avatars</a>
         </h2>
       </header>
