--- a/content/about.njk
+++ b/content/about.njk
@@ -36,7 +36,7 @@ eleventyNavigation:
 			<ul class="unstyled">
 				<li><span class="emoji" role="img" aria-label="Coffee">☕️</span> <a href="https://status.cafe/users/fri11s">@fri11s@status.cafe</a></li>
 				<li><span class="emoji" role="img" aria-label="Cat">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
-				<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
+				<li><span class="emoji" role="img" aria-label="Elephant">🐘</span><a href="https://indieweb.social/@frills">@frills@indieweb.social</a></li>
 			</ul>
 		</div>
 	</article>
