--- a/content/accessibility.njk
+++ b/content/accessibility.njk
@@ -23,7 +23,7 @@ rss: false
 		<ul class="unstyled">
 			<li><span class="emoji" role="img" aria-label="Email">📧</span> <a href="mailto:fri11s@proton.me">fri11s@proton.me</a></li>
 			<li><span class="emoji" role="img" aria-label="Neocities profile">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
-			<li><span class="emoji" role="img" aria-label="Mastodon">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
+			<li><span class="emoji" role="img" aria-label="Mastodon">🐘</span> <a href="https://indieweb.social/@frills">@frills@indieweb.social</a></li>
 		</ul>
 
 	</div>
