📚 Update currently reading

--- a/content/index.njk
+++ b/content/index.njk
@@ -121,7 +121,7 @@ scripts: '
 				<h2>Currently reading</h2>
 				',
 				body = '
-				<a href="https://www.goodreads.com/book/show/76706470-heir-of-fire" class="hidden">Heir of Fire - Sarah J Maas</a>
+				<a href="https://www.goodreads.com/book/show/76707900-queen-of-shadows" class="hidden">Queen of Shadows - Sarah J Maas</a>
 				'
 			)}}
 		</div>
