--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -26,8 +26,9 @@
   --linkhover: SpringGreen;
   --text: LavenderBlush;
   --subtext: PeachPuff;
-  --dashboard-bg: SlateBlue;
-  --dashboard-outline: #3e318e;
+  --dashboard-bg: Gold;
+  --dashboard-outline: Goldenrod;
+  --dashboard-text: Black;
   --callout-info: DeepSkyBlue;
   --logo-x: White;
   --logo-anim-1: hsl(255, 70%, 70%);
@@ -43,7 +44,7 @@ html[data-scheme='dark'] {
   --bg: Black;
   --bodyrgb: 0, 0, 0;
   --highlight: Gold;
-  --accent: Gold;
+  --accent: #FF5790;
   --accentcontrast: Black;
   --separator: PaleGreen;
   --interactive: OrangeRed;
@@ -54,8 +55,9 @@ html[data-scheme='dark'] {
   --linkhover: SpringGreen;
   --text: LavenderBlush;
   --subtext: PeachPuff;
-  --dashboard-bg: SlateBlue;
-  --dashboard-outline: #3e318e;
+  --dashboard-bg: Gold;
+  --dashboard-outline: Goldenrod;
+  --dashboard-text: Black;
   --callout-info: DeepSkyBlue;
   --logo-x: Gold;
   --logo-anim-1: hsl(255, 70%, 70%);
@@ -74,7 +76,7 @@ html[data-scheme='dark'] {
     --bodyrgb: 255, 250, 250;
     --interactive: #e1007a;
     --input-bg: Lavender;
-    --input-border: DeepSkyBlue;
+    --input-border: DodgerBlue;
     --separator: DeepPink;
     --highlight: OrangeRed;
     --accent: #FF5790;
@@ -84,16 +86,17 @@ html[data-scheme='dark'] {
     --linkhover: #e1007a;
     --linkvisited: BlueViolet;
     --text: Black;
-    --subtext: Indigo;
-    --dashboard-bg: LemonChiffon;
-    --dashboard-outline: Yellow;
-    --logo-x: White;
+    --subtext: DarkRed;
+    --dashboard-bg: Gold;
+    --dashboard-outline: Goldenrod;
+    --dashboard-text: Black;
+    --logo-x: Gold;
     --logo-anim-1: hsl(255, 70%, 70%);
     --logo-anim-2: hsl(330, 100%, 40%);
     --logo-anim-3: hsl(10, 100%, 50%);
     --logo-anim-4: hsl(320, 100%, 50%);
     --logo-anim-5: hsl(204, 100%, 50%);
-    --logo-anim-6: hsl(153, 100%, 40%);
+    --logo-anim-6: hsl(153, 100%, 30%);
   }
 }
 
@@ -116,6 +119,7 @@ html[data-scheme='light'] {
   --subtext: DarkRed;
   --dashboard-bg: Gold;
   --dashboard-outline: Goldenrod;
+  --dashboard-text: Black;
   --logo-x: Gold;
   --logo-anim-1: hsl(255, 70%, 70%);
   --logo-anim-2: hsl(330, 100%, 40%);
