🔥 Hide Snow theme button

--- a/assets/css/components/_toggle.css
+++ b/assets/css/components/_toggle.css
@@ -24,6 +24,7 @@
   background-image: linear-gradient(to right, var(--text) 50%, transparent 50%);
 }
 
+.toggle--snow,
 .toggle--christmas,
 .toggle--spooky {
   display: none;
