🎨 Update theme structure

--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -15,11 +15,8 @@
     </a>
     {% include "structure/global/nav.njk" %}
     <div class="settings">
-        <button id="snowSchemeButton" class="button ghost toggle toggle--snow">
-            Toggle snow theme
-        </button>
-        <button id="christmasSchemeButton" class="button ghost toggle toggle--christmas">
-            Toggle Christmas theme
+        <button id="themeButton" class="button ghost toggle toggle--seasonal">
+            Toggle seasonal theme
         </button>
         <button id="colorSchemeButton" class="button ghost toggle toggle--colorscheme">
             Toggle dark theme
