--- a/assets/css/components/_toggle.css
+++ b/assets/css/components/_toggle.css
@@ -24,8 +24,6 @@
   background-image: linear-gradient(to right, var(--text) 50%, transparent 50%);
 }
 
-.toggle--snow,
-.toggle--christmas,
-.toggle--spooky {
+.toggle--seasonal {
   display: none;
 }
