--- a/content/experiments/html-named-colors.njk
+++ b/content/experiments/html-named-colors.njk
@@ -25,6 +25,7 @@ style: '
   .namedColourButton:hover,
   .namedColourButton:focus,
   .namedColourButton:active {
+    color: var(--text);
     background-color: transparent;
     box-shadow: 0 0 0 0 var(--bodybg);
   }
