📃 Update site credits

--- a/content/site.njk
+++ b/content/site.njk
@@ -28,12 +28,11 @@ rss: false
 			<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
 			<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">Last.fm last played script</a> by <a href="https://biancarosa.com.br/" target="_blank">Bianca Rosa</a></li>
 			<li><a href="https://superdesigner.co/tools/css-backgrounds" target="_blank">CSS background</a> by Super Designer</li>
-			<li>Avatar by <a href="https://alexboucher.carbonmade.com/">flowerveil</a>, commisioned many moons ago</li>
-			<li><a href="https://doodad.dev/dither-me-this/" target="_blank">Image dithering tool</a> by doodad</li>
 			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
 			<li>Body font is <a href="https://brailleinstitute.org/freefont" target="_blank">Atkinson Hyperlegible</a></li>
 			<li>Web analytics by <a href="https://www.goatcounter.com/" target="_blank">Goat Counter</a></li>
 			<li><a href="https://virtualobserver.moe/ayano/comment-widget" target="_blank">Guestbook widget</a> by virtualobserver</li>
+			<li>A couple of the 80x15 badges are created by <a href="https://zeusofthecrows.github.io/stadt/gallery/" target="_blank">Zeus</a></li>
 		</ul>
 
 		<h2 id="javascript">JavaScript</h2>
