--- a/assets/css/abstracts/_utility.css
+++ b/assets/css/abstracts/_utility.css
@@ -1,3 +1,11 @@
+.pt-0 {
+  padding-top: 0 !important;
+}
+
+.pb-0 {
+  padding-top: 0 !important;
+}
+
 .pb-1 {
   padding-bottom: 1rem !important;
 }
