⌚ Add now page to navigation

--- a/content/now.njk
+++ b/content/now.njk
@@ -1,5 +1,9 @@
 ---
 title: Now
+eleventyNavigation:
+  key: Now
+  emoji: <span class="emoji" aria-hidden="true">⌚</span>
+  order: 2
 rss: true
 date: 2023-01-08
 ---
@@ -26,6 +30,7 @@ date: 2023-01-08
   <ul>
     <li>Journalling more as therapy.</li>
     <li>Improving my strength through daily press ups.</li>
+    <li>Slowly working on my new RPG inspired about page.</li>
   </ul>
   {# ------------------------------ #}
   <h2>Months</h2>
