--- a/content/links.njk
+++ b/content/links.njk
@@ -260,13 +260,6 @@ scripts: '<script>
     "color": "#fff",
     "type": "link"
   }, {
-    "name": "ten@earth",
-    "href": "https://10kph.neocities.org",
-    "size": "11px",
-    "bg": "#1c1e26",
-    "color": "#e95678",
-    "type": "link"
-  }, {
     "name": "Cassidy Williams",
     "href": "https://cassidoo.co",
     "size": "11px",
@@ -284,6 +277,16 @@ scripts: '<script>
     "name": "Leviathren",
     "href": "https://leviathren.neocities.org",
     "src": "leviathren.png",
+    "type": "button"
+  }, {
+    "name": "10kph",
+    "href": "https://10kph.neocities.org",
+    "src": "10kph.png",
+    "type": "button"
+  }, {
+    "name": "Doqmeat",
+    "href": "https://doqmeat.neocities.org",
+    "src": "doqmeat.png",
     "type": "button"
   }
 ] %}
