📝 Add blog post

--- a/content/now.njk
+++ b/content/now.njk
@@ -11,14 +11,17 @@ date: 2023-01-08
 
 {% block main %}
 <article class="reading-width">
-  <p>What I am up to today, this week, this month, this year.<br/>
-  Inspired by <a href="https://sneekrealm.neocities.org/now/">Sneek's</a> format of <a href="https://nownownow.com/about">nownownow</a> pages.</p>
+  <p>What I am up to today, this week, this month, this year.<br />
+    Inspired by <a href="https://sneekrealm.neocities.org/now/">Sneek's</a> format of <a href="https://nownownow.com/about">nownownow</a> pages.</p>
 
   <small class="d-b">Last updated: {{ date | readableDate("d LLL yyyy") }}</small>
 
   <hr class="my-2">
 
-  <h2 class="pt-0">Days</h2>
+  <h2 class="pt-0">Current obsession</h2>
+  <p>Reading! A lot!</p>
+
+  <h2>Days</h2>
   <ul>
     <li>My theme for <a href="https://32bit.cafe/">32bit.cafe</a> is the default at the moment!</li>
     <li>Learning about the history of Witchcraft and casting protection spells.</li>
