--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -39,7 +39,7 @@
 }
 
 .dashboard__item.--card {
-  box-shadow: inset 0 0 0 4px var(--dashboard-bg), 4px 4px 0 0 var(--dashboard-outline);
+  box-shadow: inset 0 0 0 4px var(--dashboard-bg);
   padding: 4px;
   background-color: var(--bodybg);
   max-width: calc(100% - 8px);
@@ -138,7 +138,8 @@
   margin-bottom: 0rem;
   background: var(--bg);
   padding: 0.5rem;
-  margin-top: 3px
+  margin-top: 3px;
+  border-radius: 0.75rem;
 }
 
 .dashboard__item.--latestposts .description>ul,
