--- a/assets/css/pages/_bloglist.css
+++ b/assets/css/pages/_bloglist.css
@@ -1,12 +1,5 @@
-.listing time {
-  display: inline-block;
-}
-
-.listing .draft a,
-.listing .draft time {
-  opacity: 0.5;
-}
-
-.listing li.draft::before {
-  content: '✏️  ' !important
+.listing li {
+  display: grid;
+  grid-template-columns: 8rem 1fr;
+  margin-bottom: 0.1rem;
 }
